Added Initial Endpoints for TimeSheet Api

--- a/timesheet/timesheet-api/build.gradle
+++ b/timesheet/timesheet-api/build.gradle
@@ -13,7 +13,19 @@ repositories {
 }
 
 dependencies {
+	/*core*/
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	/*lombok*/
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	/*Swagger*/
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+
+	/*Test*/
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
