--- a/timesheet/timesheet-api/build.gradle
+++ b/timesheet/timesheet-api/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	/*db*/
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 	/*lombok*/
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
