--- a/timesheet/timesheet-api/Dockerfile
+++ b/timesheet/timesheet-api/Dockerfile
@@ -1,3 +1,5 @@
 FROM openjdk:11
-COPY build/libs/*.jar app.jar
+VOLUME /tmp
+ARG JAR_FILE
+COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
